--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^5.1.0",
+    "express-session": "^1.18.1",
     "http-status": "^2.1.0",
     "mongoose": "^8.16.2",
     "nodemon": "^3.1.10",
